quest-sys/QuEST/QuEST/include/QuEST.h

    
typedef struct {
    char* buffer;       
    int bufferSize;     
    int bufferFill;     
    int isLogging;      
} QASMLogger;
typedef struct ComplexArray
{
    qreal *real; 
    qreal *imag;
} ComplexArray;
 enum pauliOpType {PAULI_I=0, PAULI_X=1, PAULI_Y=2, PAULI_Z=3};
typedef struct Complex
{
    qreal real;
    qreal imag;
} Complex;
typedef struct ComplexMatrix2
{
    qreal real[2][2];
    qreal imag[2][2];
} ComplexMatrix2;
enum phaseFunc {
    NORM=0,     SCALED_NORM=1,      INVERSE_NORM=2,      SCALED_INVERSE_NORM=3,      SCALED_INVERSE_SHIFTED_NORM=4,
    PRODUCT=5,  SCALED_PRODUCT=6,   INVERSE_PRODUCT=7,   SCALED_INVERSE_PRODUCT=8,
    DISTANCE=9, SCALED_DISTANCE=10, INVERSE_DISTANCE=11, SCALED_INVERSE_DISTANCE=12, SCALED_INVERSE_SHIFTED_DISTANCE=13};
enum bitEncoding {UNSIGNED=0, TWOS_COMPLEMENT=1};
typedef struct PauliHamil 
{
    enum pauliOpType* pauliCodes;
    qreal* termCoeffs;
    int numSumTerms;
    int numQubits;
} PauliHamil;
typedef struct DiagonalOp
{
    int numQubits;
    long long int numElemsPerChunk;
    int numChunks;
    int chunkId;
    qreal *real;
    qreal *imag;
    ComplexArray deviceOperator;
} DiagonalOp;
typedef struct Qureg
{
    int isDensityMatrix;
    int numQubitsRepresented;
    int numQubitsInStateVec;
    long long int numAmpsPerChunk;
    long long int numAmpsTotal;
    int chunkId;
    int numChunks;
    ComplexArray stateVec; 
    ComplexArray pairStateVec;
    ComplexArray deviceStateVec;
    qreal *firstLevelReduction, *secondLevelReduction;
    QASMLogger* qasmLog;
} Qureg;
typedef struct QuESTEnv
{
    int rank;
    int numRanks;
    unsigned long int* seeds;
    int numSeeds;
} QuESTEnv;
PauliHamil createPauliHamil(int numQubits, int numSumTerms);
PauliHamil createPauliHamilFromFile(char* fn);
void initPauliHamil(PauliHamil hamil, qreal* coeffs, enum pauliOpType* codes);
DiagonalOp createDiagonalOp(int numQubits, QuESTEnv env);
void setDiagonalOpElems(DiagonalOp op, long long int startInd, qreal* real, qreal* imag, long long int numElems);
void applyDiagonalOp(Qureg qureg, DiagonalOp op);
Complex calcExpecDiagonalOp(Qureg qureg, DiagonalOp op);
void reportState(Qureg qureg);
void reportStateToScreen(Qureg qureg, QuESTEnv env, int reportRank);
void reportQuregParams(Qureg qureg);
void reportPauliHamil(PauliHamil hamil);
int getNumQubits(Qureg qureg);
long long int getNumAmps(Qureg qureg);
void initBlankState(Qureg qureg);
void initZeroState(Qureg qureg);
void unitary(Qureg qureg, int targetQubit, ComplexMatrix2 u);
void pauliX(Qureg qureg, int targetQubit);
void pauliY(Qureg qureg, int targetQubit);
void pauliZ(Qureg qureg, int targetQubit);
qreal calcExpecPauliProd(Qureg qureg, int* targetQubits, enum pauliOpType* pauliCodes, int numTargets, Qureg workspace);
qreal calcExpecPauliSum(Qureg qureg, enum pauliOpType* allPauliCodes, qreal* termCoeffs, int numSumTerms, Qureg workspace);
qreal calcExpecPauliHamil(Qureg qureg, PauliHamil hamil, Qureg workspace);
void setWeightedQureg(Complex fac1, Qureg qureg1, Complex fac2, Qureg qureg2, Complex facOut, Qureg out);
void invalidQuESTInputError(const char* errMsg, const char* errFunc);
void applyPhaseFunc(Qureg qureg, int* qubits, int numQubits, enum bitEncoding encoding, qreal* coeffs, qreal* exponents, int numTerms);
void applyNamedPhaseFunc(Qureg qureg, int* qubits, int* numQubitsPerReg, int numRegs, enum bitEncoding encoding, enum phaseFunc functionNameCode);