quest-sys/src/bindings.rs

extern "C" {
    #[doc = " Modifies a subset (starting at index \\p startInd, and ending at index"]
    #[doc = " \\p startInd <b>+</b> \\p numElems) of the elements in ::DiagonalOp \\p op"]
    #[doc = " with the given complex numbers (passed as \\p real and \\p imag components)."]
    #[doc = ""]
    #[doc = " In GPU mode, this updates both the RAM (\\p op.real and \\p op.imag), and the"]
    #[doc = " persistent GPU memory."]
    #[doc = ""]
    #[doc = " In distributed mode, this function assumes the subset \\p real and \\p imag exist"]
    #[doc = " (at least) on the node containing the ultimately updated elements.\\n"]
    #[doc = " For example, below is the correct way to modify the full 8 elements of \\p op"]
    #[doc = " when split between 2 nodes."]
    #[doc = " ```"]
    #[doc = "     DiagonalOp op = createDiagonalOp(3, env);"]
    #[doc = ""]
    #[doc = "     int numElems = 4;"]
    #[doc = "     qreal re[] = {1,2,3,4};"]
    #[doc = "     qreal im[] = {1,2,3,4};"]
    #[doc = "     setDiagonalOpElems(op, 0, re, im, numElems);"]
    #[doc = ""]
    #[doc = "     // modify re and im to the next set of elements"]
    #[doc = "     for (int i=0; i<4; i++) {"]
    #[doc = "       re[i] += 4;"]
    #[doc = "       im[i] += 4;"]
    #[doc = "     }"]
    #[doc = "     setDiagonalOpElems(op, 4, re, im, numElems);"]
    #[doc = " ```"]
    #[doc = ""]
    #[doc = " In this way, one can avoid a single node containing all new elements which might"]
    #[doc = " not fit. If more elements are passed than exist on an individual node, each"]
    #[doc = " node merely ignores the additional elements."]
    #[doc = ""]
    #[doc = " @ingroup type"]
    #[doc = " @param[in,out] op the ::DiagonalOp to modify"]
    #[doc = " @param[in] startInd the starting index (globally) of the subset of elements to modify"]
    #[doc = " @param[in] real  the real components of the new elements"]
    #[doc = " @param[in] imag  the imaginary components of the new elements"]
    #[doc = " @param[in] numElems the number of new elements (the length of \\p real and \\p imag)"]
    #[doc = " @throws invalidQuESTInputError()"]
    #[doc = " - if \\p op was not created"]
    #[doc = " - if \\p startInd is an invalid index (<0 or >=<b>pow(2,</b>`op.numQubits`<b>)</b>)"]
    #[doc = " - if \\p numElems is an invalid number of elements (<=0 or ><b>pow(2,</b>`op.numQubits`<b>)</b>)"]
    #[doc = " - if there are fewer than \\p numElems elements in \\p op after \\p startInd"]
    #[doc = " @throws segmentation-fault"]
    #[doc = " - if either \\p real or \\p imag have fewer elements than \\p numElems"]
    #[doc = " @author Tyson Jones"]
    pub fn setDiagonalOpElems(
        op: DiagonalOp,
        startInd: ::std::os::raw::c_longlong,
        real: *mut f64,
        imag: *mut f64,
        numElems: ::std::os::raw::c_longlong,
    );
}
extern "C" {
    #[doc = " Apply a diagonal operator, which is possibly non-unitary and non-Hermitian,"]
    #[doc = " to the entire \\p qureg."]
    #[doc = ""]
    #[doc = " Let \\f$d_j = \\text{op.real}[j] + (\\text{op.imag}[j])\\,\\text{i} \\f$, and"]
    #[doc = " \\f["]
    #[doc = "  \\hat{D} = \\begin{pmatrix}"]
    #[doc = "  d_0 \\\\"]
    #[doc = "  & d_1 \\\\"]
    #[doc = "  & & \\ddots \\\\"]
    #[doc = "  & & & d_{2^{\\text{op.numQubits}}-1}"]
    #[doc = "  \\end{pmatrix}."]
    #[doc = " \\f]"]
    #[doc = " If \\p qureg is a state-vector \\f$|\\psi\\rangle\\f$, this function performs"]
    #[doc = "  \\f$|\\psi\\rangle \\rightarrow \\hat{D} \\, |\\psi\\rangle\\f$. \\n"]
    #[doc = " If \\p qureg is a density-matrix \\f$\\rho\\f$, this function performs"]
    #[doc = "  \\f$\\rho \\rightarrow \\hat{D}\\, \\rho\\f$. Notice this has not applied \\f$\\hat{D}\\f$"]
    #[doc = " in the fashion of a unitary."]
    #[doc = ""]
    #[doc = " > If your operator is unitary with unit amplitudes, the phases of which can be"]
    #[doc = " > described by an analytic expression, you should instead use applyPhaseFunc()"]
    #[doc = " > or applyNamedPhaseFunc() for significant memory and runtime savings."]
    #[doc = ""]
    #[doc = " @see"]
    #[doc = " - createDiagonalOp()"]
    #[doc = " - calcExpecDiagonalOp()"]
    #[doc = " - applyPhaseFunc()"]
    #[doc = " - applyNamedPhaseFunc()"]
    #[doc = ""]
    #[doc = " @ingroup operator"]
    #[doc = " @param[in,out] qureg the state to operate the diagonal operator upon"]
    #[doc = " @param[in] op the diagonal operator to apply"]
    #[doc = " @throws invalidQuESTInputError()"]
    #[doc = " - if \\p op was not created"]
    #[doc = " - if \\p op acts on a different number of qubits than \\p qureg represents"]
    #[doc = " @author Tyson Jones"]
    pub fn applyDiagonalOp(qureg: Qureg, op: DiagonalOp);
}
extern "C" {
    #[doc = " Computes the expected value of the diagonal operator \\p op for state \\p qureg."]
    #[doc = " Since \\p op is not necessarily Hermitian, the expected value may be a complex"]
    #[doc = " number."]
    #[doc = ""]
    #[doc = " Let \\f$ D \\f$ be the diagonal operator \\p op, with diagonal elements \\f$ d_i \\f$."]
    #[doc = " Then if \\p qureg is a state-vector \\f$|\\psi\\rangle \\f$, this function computes"]
    #[doc = " \\f["]
    #[doc = "\\langle \\psi | D | \\psi \\rangle = \\sum_i |\\psi_i|^2 \\, d_i"]
    #[doc = " \\f]"]
    #[doc = " If \\p qureg is a density matrix \\f$ \\rho \\f$, this function computes"]
    #[doc = " \\f["]
    #[doc = "\\text{Trace}( D \\rho ) = \\sum_i \\rho_{ii} \\, d_i"]
    #[doc = " \\f]"]
    #[doc = ""]
    #[doc = " @see"]
    #[doc = " - createDiagonalOp()"]
    #[doc = " - applyDiagonalOp()"]
    #[doc = " - calcExpecPauliSum()"]
    #[doc = " - calcExpecPauliProd()"]
    #[doc = " - calcExpecPauliHamil()"]
    #[doc = ""]
    #[doc = " @ingroup calc"]
    #[doc = " @param[in] qureg a state-vector or density matrix"]
    #[doc = " @param[in] op    the diagonal operator to compute the expected value of"]
    #[doc = " @return the expected vaulue of the operator"]
    #[doc = " @throws invalidQuESTInputError()"]
    #[doc = " - if \\p op was not created"]
    #[doc = " - if \\p op acts on a different number of qubits than \\p qureg represents"]
    #[doc = " @author Tyson Jones"]
    pub fn calcExpecDiagonalOp(qureg: Qureg, op: DiagonalOp) -> Complex;
}
extern "C" {
    #[doc = " Print the current state vector of probability amplitudes for a set of qubits to file."]
    #[doc = " File format:"]
    #[doc = " @verbatim"]
    #[doc = "real, imag"]
    #[doc = "realComponent1, imagComponent1"]
    #[doc = "realComponent2, imagComponent2"]
    #[doc = "..."]
    #[doc = "realComponentN, imagComponentN"]
    #[doc = "@endverbatim"]
    #[doc = ""]
    #[doc = " File naming convention:"]
    #[doc = ""]
    #[doc = " For each node that the program runs on, a file 'state_rank_[node_rank].csv' is generated. If there is"]
    #[doc = " more than one node, ranks after the first do not include the header"]
    #[doc = " @verbatim"]
    #[doc = "real, imag"]
    #[doc = "@endverbatim"]
    #[doc = " so that files are easier to combine."]
    #[doc = ""]
    #[doc = " @ingroup debug"]
    #[doc = " @param[in,out] qureg object representing the set of qubits"]
    #[doc = " @author Ania Brown"]
    pub fn reportState(qureg: Qureg);
}
extern "C" {
    #[doc = " Print the current state vector of probability amplitudes for a set of qubits to standard out."]
    #[doc = " For debugging purposes. Each rank should print output serially."]
    #[doc = " Only print output for systems <= 5 qubits"]
    #[doc = ""]
    #[doc = " @ingroup debug"]
    #[doc = " @author Ania Brown"]
    pub fn reportStateToScreen(qureg: Qureg, env: QuESTEnv, reportRank: ::std::os::raw::c_int);
}
extern "C" {
    #[doc = " Report metainformation about a set of qubits: number of qubits, number of probability amplitudes."]
    #[doc = ""]
    #[doc = " @ingroup debug"]
    #[doc = " @param[in] qureg object representing the set of qubits"]
    #[doc = " @author Ania Brown"]
    pub fn reportQuregParams(qureg: Qureg);
}
extern "C" {
    #[doc = " Print the \\p PauliHamil to screen."]
    #[doc = " The output features a new line for each term, each with format"]
    #[doc = ""]
    #[doc = "     c p1 p2 p3 ... pN"]
    #[doc = ""]
    #[doc = " where \\p c is the real coefficient of the term, and \\p p1 ... \\p pN are"]
    #[doc = " numbers \\p 0, \\p 1, \\p 2, \\p 3 to indicate identity, pauliX, pauliY and pauliZ"]
    #[doc = " operators respectively, acting on qubits \\p 0 through \\p N-1 (all qubits)."]
    #[doc = " A tab character separates c and p1, but single spaces separate the Pauli operators."]
    #[doc = ""]
    #[doc = " @see"]
    #[doc = " - createPauliHamil()"]
    #[doc = " - initPauliHamil()"]
    #[doc = " - createPauliHamilFromFile()"]
    #[doc = ""]
    #[doc = " @ingroup debug"]
    #[doc = " @param[in] hamil an instantiated PauliHamil"]
    #[doc = " @throws invalidQuESTInputError if the parameters of \\p hamil are invalid, i.e."]
    #[doc = "      if \\p numQubits <= 0, or if \\p numSumTerms <= 0, or if \\p pauliCodes"]
    #[doc = "      contains an invalid Pauli code."]
    #[doc = " @author Tyson Jones"]
    pub fn reportPauliHamil(hamil: PauliHamil);
}
extern "C" {
    #[doc = " Returns the number of qubits represented by \\p qureg."]
    #[doc = ""]
    #[doc = " @see"]
    #[doc = " - getNumAmps()"]
    #[doc = ""]
    #[doc = " @ingroup calc"]
    #[doc = " @param[in] qureg a state-vecor or density matrix"]
    #[doc = " @return `qureg.numQubitsRepresented`"]
    #[doc = " @author Tyson Jones"]
    pub fn getNumQubits(qureg: Qureg) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Returns the number of complex amplitudes in a state-vector \\p qureg."]
    #[doc = ""]
    #[doc = " In distributed mode, this returns the total number of amplitudes in the full"]
    #[doc = " representation of \\p qureg, and so may be larger than the number stored on"]
    #[doc = " each node. For the latter, refer to Qureg.numAmpsPerChunk."]
    #[doc = ""]
    #[doc = " @see"]
    #[doc = " - getNumQubits()"]
    #[doc = ""]
    #[doc = " @ingroup calc"]
    #[doc = " @param[in] qureg a state-vecotor"]
    #[doc = " @return the total number of complex amplitudes representing \\p qureg."]
    #[doc = " @throws invalidQuESTInputError()"]
    #[doc = " - if \\p qureg is a density matrix"]
    #[doc = " @author Tyson Jones"]
    pub fn getNumAmps(qureg: Qureg) -> ::std::os::raw::c_longlong;
}
extern "C" {
    #[doc = " Initialises a qureg to have all-zero-amplitudes. This is an unphysical state"]
    #[doc = " useful for iteratively building a state with functions like setWeightedQureg(),"]
    #[doc = " and should not be confused with initZeroState()."]
    #[doc = ""]
    #[doc = " @ingroup init"]
    #[doc = " @param[in,out] qureg a ::Qureg of which to clear all amplitudes"]
    #[doc = " @author Tyson Jones"]
    pub fn initBlankState(qureg: Qureg);
}
extern "C" {
    #[doc = " Initialise \\p qureg into the zero state."]
    #[doc = ""]
    #[doc = " If \\p qureg is a state-vector of \\f$N\\f$ qubits, it is modified to state"]
    #[doc = " \\f$ {| 0 \\rangle}^{\\otimes N} \\f$. \\n"]
    #[doc = " If \\p qureg is a density matrix of \\f$ N \\f$ qubits, it is modified to state"]
    #[doc = " \\f$ {| 0 \\rangle\\langle 0 |}^{\\otimes N} \\f$"]
    #[doc = ""]
    #[doc = " @ingroup init"]
    #[doc = " @param[in,out] qureg the object representing the set of all qubits to initialise"]
    #[doc = " @author Ania Brown (state-vector)"]
    #[doc = " @author Tyson Jones (density matrix, doc)"]
    pub fn initZeroState(qureg: Qureg);
}
